--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/lodash": "^4.17.20",
         "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "express-rate-limit": "^8.2.1",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^7.0.12",
         "redis": "^5.9.0",
         "uuid": "^13.0.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/node": "^24.8.1",
+        "@types/nodemailer": "^7.0.5",
         "nodemon": "^3.1.10",
         "prisma": "^6.19.0",
         "ts-node": "^10.9.2",
