--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+APP_NAME="SHOP NICK GAME"
 NODE_ENV=development
 PORT=80xx
 DB_URL="mongodb://localhost:xxxx"
 DB_NAME="xxxx"
 JWT_SECURE="xxxx"
+URL_REDIS="redis://localhost:xxxx"
+SEPAY_API_KEY=xxxxxxxx
+SEPAY_MERCHANT_ID=xxxxxx
