--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "@types/bcrypt": "^6.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/lodash": "^4.17.20",
+        "axios": "^1.13.4",
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "express-rate-limit": "^8.2.1",
         "jsonwebtoken": "^9.0.2",
+        "node-cron": "^4.2.1",
         "nodemailer": "^7.0.12",
         "redis": "^5.9.0",
         "uuid": "^13.0.0",
